syntax = "proto3";

package darkdna.api;
option go_package = "api";

import "google/protobuf/descriptor.proto";

// The error message that is the error of the message.
message Error {
  // The actual error message itself.
  string error = 1;
  int32 code = 2;
}

message SecurityRule {
  repeated string scopes = 1;
  repeated string permissionGroups = 2;
}

message ApiRule {
  string title = 1;
  string version = 2;
  string name = 5;

  SecurityRule security = 6;
}

message CodesRule {
  string okay = 1;

  string not_found = 2;
}

enum ExtendedFormat {
  // Specifies that this is a Unix Timestamp. Only applies to int64 object types.
  TIMESTAMP = 0;
}

// Next ID: 28307355

extend google.protobuf.FileOptions {
  ApiRule info = 28307350;
}

extend google.protobuf.MethodOptions {
  string description = 28307347;
}

extend google.protobuf.MethodOptions {
  SecurityRule security = 28307354;
}

extend google.protobuf.MethodOptions {
  repeated string tags = 28307348;
}

extend google.protobuf.MethodOptions {
  string summary = 28307349;
}

extend google.protobuf.MethodOptions {
  CodesRule codes = 28307351;
}

extend google.protobuf.MethodOptions {
  repeated string scopes = 28307352;
}

extend google.protobuf.FieldOptions {
  ExtendedFormat format = 28307353;
}
